# scanpy-cli

./: .gitignore  README.md  prek.toml  pyproject.toml
.cursor/rules/: prek-after-feature.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/scanpy_cli/: __init__.py  pp.py  utils.py
src/scanpy_cli/io/: __init__.py  read_10x_h5.py  view.py
src/scanpy_cli/pl/: __init__.py  heatmap.py  umap.py  violin.py
src/scanpy_cli/pp/: __init__.py  bbknn.py  calculate_qc_metrics.py  combat.py  downsample_counts.py  filter_cells.py  filter_genes.py  harmony.py  highly_variable_genes.py  log1p.py  neighbors.py  normalize.py  normalize_total.py  pca.py  regress_out.py  scale.py  scanorama.py  scrublet.py
src/scanpy_cli/tl/: __init__.py  clustering.py  combat.py  hvg.py  leiden.py  paga.py  pca.py  rank_genes_groups.py  score_genes.py  scrublet.py  (+2 more)
test/data/: retrieve.py
tests/: conftest.py  test_cli.py
tests/data/: retrieve.py
tests/test_io/: read_10x_h5.py  view.py
tests/test_pl/: test_umap.py
tests/test_pp/: bbknn.py  calculate_qc_metrics.py  combat.py  downsample_counts.py  harmony.py  highly_variable_genes.py  log1p.py  neighbors.py  normalize_total.py  pca.py  regress_out.py  scale.py  scanorama.py  scrublet.py  test_bbknn.py  test_feature_selection.py  test_pca.py  test_quality_control.py  test_scanorama.py
tests/test_tl/: leiden.py  paga.py  rank_genes_groups.py  score_genes.py  test_batch_correction.py  test_differential_expression.py  test_feature_selection.py  test_quality_control.py  test_umap.py  tsne.py  umap.py
