[project]
name = "scanpy-cli"
version = "0.2.0"
description = "CLI for the scanpy package"
readme = "README.md"
authors = [
    { name = "nictru", email = "nictru32@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bbknn>=1.6.0",
    "harmonypy>=0.0.10",
    "igraph>=0.11.8",
    "leidenalg>=0.10.2",
    "rich>=13.0.0",
    "rich-click>=1.8.8",
    "scanorama>=1.7.4",
    "scanpy>=1.12.0",
    "scikit-image>=0.25.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
scanpy-cli = "scanpy_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pooch>=1.8.2",
    "prek>=0.3.5",
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--import-mode=importlib -n auto"

[project.optional-dependencies]
testing = [
    "pytest>=8.3.5",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.3.5",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
